--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-boiler-plate",
+  "name": "dean-canada-shop",
   "version": "1.0.0",
-  "description": "react boiler plate",
+  "description": "dean-canada-shop",
   "main": "index.js",
   "engine": {
     "node": "10.16.0",
@@ -13,8 +13,7 @@
     "frontend": "npm run start --prefix client",
     "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
-  "author": "John ahn",
-  "license": "ISC",
+  "author": "Dean Kim",
   "dependencies": {
     "async": "^3.2.0",
     "bcrypt": "^3.0.8",
@@ -22,6 +21,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
@@ -34,5 +34,6 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.19.1"
-  }
+  },
+  "proxy": "http://127.0.0.1:5000/"
 }
