--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "scripts": {
     "start": "node server/index.js",
-    "backend": "nodemon server/index.js",
+    "backend": "nodemon -r dotenv/config server/index.js",
     "frontend": "npm run start --prefix client",
     "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
   "author": "Dean Kim",
   "dependencies": {
     "async": "^3.2.0",
+    "aws-sdk": "^2.913.0",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -27,6 +28,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.20",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
     "supports-color": "^7.1.0"
