--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.1.2",
+    "googleapis": "^76.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.20",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "nodemailer": "^6.6.1",
     "react-google-login": "^5.2.2",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
