--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -13,6 +13,6 @@ RUN npm install
 
 COPY . .
 
-# CMD ["npm", "run", "dev"]
+# CMD ["npm", "run", "backend"]
 RUN chmod +x docker-entrypoint.sh  
 ENTRYPOINT ./docker-entrypoint.sh
