--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "aws-sdk": "^2.913.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
